--- a/demo2-pyspark-jupyter.ipynb
+++ b/demo2-pyspark-jupyter.ipynb
@@ -10,12 +10,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0dc93afb-af89-4c94-add5-614aa004646a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://jupyter-pyspark-483871-0.jupyter-pyspark-483871.user-inesh.svc.cluster.local:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.5.3</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>k8s://https://kubernetes.default.svc:443</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>AIML4OS</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        \n",
+       "            </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<pyspark.sql.session.SparkSession at 0x7f4824198d70>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import necessary libraries\n",
     "from pyspark.sql import SparkSession\n",
@@ -39,13 +73,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5ce9178c-f063-4e87-b568-82ef83d6e342",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------------+----+----+\n",
+      "|           ipondi|aged|dept|\n",
+      "+-----------------+----+----+\n",
+      "|0.865065781333387|  74|  01|\n",
+      "| 4.98793114865391|  39|  01|\n",
+      "| 4.98793114865391|   9|  01|\n",
+      "| 5.01354653482522|  55|  01|\n",
+      "| 3.47836794972965|   1|  01|\n",
+      "+-----------------+----+----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "df_census=spark.read.parquet(\"s3a://inesh/demo/fd-indcvi-2020.parquet\")\n",
-    "df_census.select(\"ipondi\").show(5)"
+    "df_census.select(\"ipondi\",\"aged\",\"dept\").show(5)"
    ]
   },
   {
@@ -96,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_count_centenarians.write.parquet(\"s3a://inesh/centenarians_by_dept\")"
+    "df_count_centenarians.write.parquet(\"s3a://inesh/aiml4os/centenarians_by_dept\")"
    ]
   },
   {
